# rag-mvp

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
app/: app.py  db.py  llm.py  main.py  prompt.py  settings.py  utils.py
app/static/: styles.css
app/templates/: index.html
data/: pages.json  populate.py
