[tool.poetry]
name = "rag-mvp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.7"
fastapi = {extras = ["standard"], version = "^0.115.0"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
sentence-transformers = "^3.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pre-commit = "~3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
